[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expressionizer"
version = '0.8.2'
description = "A Python library for symbolic math expressions and evaluation."
authors = [{ name = "Hudson Gouge", email = "hudson.gouge@icloud.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://pypi.org/project/expressionizer/"

[tool.setuptools]
include-package-data = true
